--- a/css/scss/utils/_variables.scss
+++ b/css/scss/utils/_variables.scss
@@ -1,4 +1,5 @@
 $primary-color : #9356DC;
+$primary-light-color: #F5EDFF;
 $secondary-color: #99E2D0;
 $secondary-font-color: #008766;
 $btn-color-1a: $primary-color;
