--- a/css/scss/pages/menus.scss
+++ b/css/scss/pages/menus.scss
@@ -22,6 +22,7 @@
 
 .menu__content{
     background-color: $bg-menu-color;
+    padding-bottom: 20px;
     &__title{
         margin-left: 20px;
         padding-bottom: 10px;
@@ -40,13 +41,53 @@
 }
 
 .menu__card{
-    background-color: #FFFFFF;
-    margin: 5%;
-    padding: 5%;
+    height: 68px;
+    width: 90%;
+    margin: 20px 0 20px 20px;
     border-radius: 15px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+ 
+    
+    
     &__detail{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        span{
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+        }
+    }
+    
+
+    &__content{
+        padding: 10px;
+        background-color: #FFFFFF;
+        position: relative;
+        
+        width: 100%;
+        height: 100%;
+        transition: transform 0.8s;
+
+        &:hover {
+            transform: translate(-50px, 0);
+        }
+    }
+
+    &__btn {
+        padding: 25px 18px;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transition: transform 0.8s;
+        background-color: $secondary-color;
+        text-align: right;
+        justify-items: center;
+        i {
+            color: white;
+        }
     }
 }
