--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -1,12 +1,10 @@
 @import "vendors/minireset";
-@import "root";
+@import "base/root";
 @import "utils/variables";
-@import "header";
-@import "footer";
+@import "base/header";
+@import "base/footer";
+@import "components/buttons";
+@import "components/icons";
+@import "components/loader";
 @import "pages/index";
 @import "pages/menus";
-@import "components/buttons";
-@import "components/icons"
-
-
-
