--- a/css/scss/base/footer.scss
+++ b/css/scss/base/footer.scss
@@ -1,21 +1,58 @@
 footer {
     background-color: $bg-footer-color;
     padding: 25px;
-    display: flex;
-    flex-direction: column;
-    a{
-        margin-top: 5px;
-        text-decoration: none;
-        color: #FFFFFF;
-        i{
-            margin-right: 10px;
-        }
-    }
+    
 }
 
-.footer-logo{
+.footer{
+    &__links{
+        display: flex;
+        flex-direction: column;
+        a{
+            margin-top: 5px;
+            text-decoration: none;
+            color: #FFFFFF;
+            i{
+                margin-right: 10px;
+            }
+        }
+    }
+    &__container{
+        display: flex;
+        flex-direction: column;
+    }
+    
+}
+
+.footer__logo{
     img {
         height: 27px;
     }
 }
 
+@media (min-width: 720px) {
+
+    .footer{
+        &__container {
+            //max-width: 1040px;
+            margin-right: 20%;
+            flex-direction: row-reverse;
+            //margin: auto;
+        }
+        &__links{
+            flex-direction: row;
+            a{
+                margin-right: 10px;
+            }
+            a > i {
+                margin-right: 5px;
+              }
+        }
+
+        &__logo{
+            margin-left: 20px;
+        }
+
+    }
+
+}
