--- a/css/scss/base/root.scss
+++ b/css/scss/base/root.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Roboto:wght@300;500;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Roboto:wght@300;500;700&family=Shrikhand&display=swap');
 
 %typography {
     font-family: 'Roboto';
@@ -41,4 +40,8 @@ h3{
 a {
     text-decoration: none;
     color: black;
+}
+
+.container{
+    z-index: 0;
 }
