--- a/css/scss/components/_buttons.scss
+++ b/css/scss/components/_buttons.scss
@@ -10,6 +10,8 @@
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
+    padding: 15px;
+
 
     &:hover{
         background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(0, $color1 -5.2%, $color2 110.74%);
