--- a/css/scss/components/_icons.scss
+++ b/css/scss/components/_icons.scss
@@ -1,11 +1,25 @@
-.icon:hover .fa-regular , .icon .fa-solid{
-    display: none;
+.icon-like{
+    position: relative;
+    cursor: pointer;
+    margin-right: 18px;
+    margin-left: 20px;
+    i{
+        font-size: 22px;
+    }
+    .fa-regular{
+        position: absolute;
+    }
+    .fa-solid{
+        opacity: 0;
+        position: absolute;
+        transition: opacity 0.5s;
+        &:hover{
+            opacity: 1;
+        }
+    }
+}
 
-}
-.icon:hover .fa-solid{
-    display: inline;
-    
-}
+
 
 .icon--gradient{
     background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
