--- a/css/scss/components/_loader.scss
+++ b/css/scss/components/_loader.scss
@@ -1,22 +1,61 @@
 .loader {
-	border-radius: 15px;
+	z-index: 1;
 	background-color: white;
-	height: 30px;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 		border-radius: inherit;
-		height: 100%;
-		
-		animation: 3s 1 load;
+		animation: load 2s forwards;
+		position: absolute;
+
+		div {
+			height: 100%;
+			width: 100%;
+			margin: 20vw;
+		}
+
+		div > div{
+			display:block;
+			width: 75px;
+			height: 75px;
+			border-style: solid;
+			border-width: 10px;
+			border-color: #CACACA;
+			border-top-color: #A221B9;
+			border-radius: 50%;
+			animation: loader 1.75s forwards;
+		  }
+		  
+		  span{
+			width: 100%;
+			height: 100%;
+			display: block;
+			border-radius: 100%;
+		  }
+		  
+		  @keyframes loader {
+			  0% {
+				transform:rotate(0deg);
+			}
+			  99.99% {
+				transform:rotate(360deg);
+
+			}
+			100%{
+				visibility: hidden;
+			}
+		  }
 
 }
 
 @keyframes load {
-	from {
-		width: 0%;
-        background-color: $primary-color;
+	0% {
 	}
-	to {
-		width: 100%;
-        background-color: $primary-color;
+	99.99% {
+		height: 100vh;
+		width: 100vw;
+	}
+	100%{
+		height: 0vh;
+		width: 0vh;
 	}
 }
