--- a/css/scss/pages/menus.scss
+++ b/css/scss/pages/menus.scss
@@ -3,33 +3,60 @@
         width: 100%;
         object-fit: cover;
     }
-
-}
-
-.menu__title{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: $bg-menu-color;
-    margin-top: -60px;
-    position: relative;
-    border-radius: 20px 20px 0 0;
-    padding: 20px;
-    i{
-        padding: 5px;
+    &__container{
+        max-width: 1055px;
+        margin: auto;
+        background-color: $bg-menu-color;
+        margin-top: -60px;
+        position: relative;
+        border-radius: 20px 20px 0 0;
+        padding: 20px;
     }
+    &__list{
+        max-width: 634px;
+        margin: auto;
+    }
+
+    &__btn{
+        text-align: center;
+    }
+
+    &__title{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        h1{
+            font-family: 'Shrikhand';
+        font-style: italic;
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 41px;
+        }
+
+        i{
+            padding: 5px;
+        }
+    }
+
+    &__cards{
+        width: 100%;
+    }
+
 }
+
+
 
 .menu__content{
+    height: 310px; //Hauteur pour annimation
     background-color: $bg-menu-color;
     padding-bottom: 20px;
     &__title{
-        margin-left: 20px;
         padding-bottom: 10px;
         border-bottom: 3px solid #99E2D0;
         z-index: 1;
         width: 40px;
-
+        text-transform: uppercase;
         h3{
             font-family: 'Inter';
             font-style: normal;
@@ -40,54 +67,119 @@
     }
 }
 
+
+
 .menu__card{
-    height: 68px;
-    width: 90%;
-    margin: 20px 0 20px 20px;
-    border-radius: 15px;
-    position: relative;
     overflow: hidden;
+    width: calc(100% - 40px);
+    height: 68px;
+    margin: 20px 0 20px 0;
+    border-radius: 15px;
     cursor: pointer;
- 
-    
-    
-    &__detail{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        span{
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-        }
+    background-color: $secondary-color;
+    i{
+        display: block;
+        color: #FFFFFF;
     }
     
+    &:hover{
+        i{
+            display: block;
+            animation: rotation .3s linear;
+        }  
+    }
+    &:active i{
+        display: block;
+    }
+
+    
+    &__icon__check{
+        padding: 25px;
+        float: right;
+    }
+
+    &__container{
+        position: absolute;
+        transition: all .4s ease;
+        border-radius: 15px;
+        height: 68px;
+        display: flex;
+        white-space: nowrap;
+        text-align: left;
+        //width: calc(100% - 40px);
+        width: 100%;
+        &:hover{
+            width: calc(100% - 59px);
+
+        }
+    }
 
     &__content{
-        padding: 10px;
+        text-overflow: ellipsis;
+        overflow: hidden;
         background-color: #FFFFFF;
-        position: relative;
-        
-        width: 100%;
-        height: 100%;
-        transition: transform 0.8s;
-
-        &:hover {
-            transform: translate(-50px, 0);
+        width: 85%;
+        border-radius: 15px 0 0 15px;
+        padding: 10px 0 0 10px;
+        h2{
+            text-overflow: ellipsis;
+        overflow: hidden;
         }
     }
 
-    &__btn {
-        padding: 25px 18px;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        transition: transform 0.8s;
-        background-color: $secondary-color;
-        text-align: right;
-        justify-items: center;
-        i {
-            color: white;
-        }
+
+    &__price{
+        background-color: #FFFFFF;
+        width: 15%;
+        padding-top: 30px;
+
+    
+    }
+
+}
+
+@media (min-width: 720px) {
+    .menu__title{
+        justify-content: center;
+    }
+
+}
+
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+
+.menu__cards > .menu__card{
+    position: absolute;
+    max-width: 634px;
+    &:nth-child(2){
+        animation: slide2 .50s linear forwards;
+    }
+    &:nth-child(3){
+        animation: slide3 .75s linear forwards;
+    }
+}
+
+@keyframes slide2 {
+    from{
+        transform: translateY(0);
+    }
+    to{
+        transform: translateY(78px);
+    }
+}
+
+@keyframes slide3 {
+    from{
+        transform: translateY(0);
+    }
+    to{
+        transform: translateY(156px);
     }
 }
