--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
-@import url("https://fonts.googleapis.com/css2?family=Inter&family=Roboto:wght@300;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Roboto:wght@300;500;700&family=Shrikhand&display=swap");
 html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, fieldset, legend, textarea, pre, iframe, hr, h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
@@ -81,6 +81,10 @@ a {
   color: black;
 }
 
+.container {
+  z-index: 0;
+}
+
 header {
   height: 63px;
 }
@@ -112,28 +116,66 @@ header i {
 footer {
   background-color: #353535;
   padding: 25px;
+}
+
+.footer__links {
   display: flex;
   flex-direction: column;
 }
-footer a {
+.footer__links a {
   margin-top: 5px;
   text-decoration: none;
   color: #FFFFFF;
 }
-footer a i {
+.footer__links a i {
   margin-right: 10px;
 }
+.footer__container {
+  display: flex;
+  flex-direction: column;
+}
 
-.footer-logo img {
+.footer__logo img {
   height: 27px;
 }
 
-.icon:hover .fa-regular, .icon .fa-solid {
-  display: none;
+@media (min-width: 720px) {
+  .footer__container {
+    margin-right: 20%;
+    flex-direction: row-reverse;
+  }
+  .footer__links {
+    flex-direction: row;
+  }
+  .footer__links a {
+    margin-right: 10px;
+  }
+  .footer__links a > i {
+    margin-right: 5px;
+  }
+  .footer__logo {
+    margin-left: 20px;
+  }
 }
-
-.icon:hover .fa-solid {
-  display: inline;
+.icon-like {
+  position: relative;
+  cursor: pointer;
+  margin-right: 18px;
+  margin-left: 20px;
+}
+.icon-like i {
+  font-size: 22px;
+}
+.icon-like .fa-regular {
+  position: absolute;
+}
+.icon-like .fa-solid {
+  opacity: 0;
+  position: absolute;
+  transition: opacity 0.5s;
+}
+.icon-like .fa-solid:hover {
+  opacity: 1;
 }
 
 .icon--gradient {
@@ -143,23 +185,56 @@ footer a i {
 }
 
 .loader {
-  border-radius: 15px;
+  z-index: 1;
   background-color: white;
-  height: 30px;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   border-radius: inherit;
+  animation: load 2s forwards;
+  position: absolute;
+}
+.loader div {
   height: 100%;
-  animation: 3s 1 load;
+  width: 100%;
+  margin: 20vw;
+}
+.loader div > div {
+  display: block;
+  width: 75px;
+  height: 75px;
+  border-style: solid;
+  border-width: 10px;
+  border-color: #CACACA;
+  border-top-color: #A221B9;
+  border-radius: 50%;
+  animation: loader 1.75s forwards;
+}
+.loader span {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 100%;
+}
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  99.99% {
+    transform: rotate(360deg);
+  }
+  100% {
+    visibility: hidden;
+  }
 }
 
 @keyframes load {
-  from {
-    width: 0%;
-    background-color: #9356DC;
+  99.99% {
+    height: 100vh;
+    width: 100vw;
   }
-  to {
-    width: 100%;
-    background-color: #9356DC;
+  100% {
+    height: 0vh;
+    width: 0vh;
   }
 }
 .info {
@@ -167,6 +242,7 @@ footer a i {
   display: flex;
   flex-direction: column;
   padding: 34px;
+  align-items: center;
 }
 .info h1 {
   margin: 0 10px;
@@ -193,6 +269,9 @@ footer a i {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
+  padding: 15px;
+  min-width: 186px;
+  max-width: 218px;
 }
 .primary-btn:hover {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(0, #9356DC -5.2%, #FF79DA 110.74%);
@@ -204,6 +283,10 @@ footer a i {
   display: flex;
   flex-direction: column;
   padding: 20px 20px 24px 32px;
+}
+.howto__btn {
+  display: flex;
+  flex-direction: column;
 }
 .howto h1 {
   text-align: left;
@@ -290,35 +373,98 @@ footer a i {
   display: none;
 }
 
+@media (min-width: 720px) {
+  .info > h1 {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+  }
+  .howto {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 20px 24px 32px;
+    max-width: 1040px;
+    margin: auto;
+  }
+  .howto__btn {
+    display: flex;
+    flex-direction: row;
+  }
+  .howto button {
+    width: 33%;
+    margin: 10px;
+  }
+  .restaurants {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-x: hidden;
+  }
+  .restaurants__cards {
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+  }
+  .restaurants__cards > article {
+    width: 335px;
+  }
+  .restaurants__container {
+    max-width: 1040px;
+    overflow-x: scroll;
+  }
+}
 .menu img {
   width: 100%;
   object-fit: cover;
 }
-
-.menu__title {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.menu__container {
+  max-width: 1055px;
+  margin: auto;
   background-color: #F6F6F6;
   margin-top: -60px;
   position: relative;
   border-radius: 20px 20px 0 0;
   padding: 20px;
 }
+.menu__list {
+  max-width: 634px;
+  margin: auto;
+}
+.menu__btn {
+  text-align: center;
+}
+.menu__title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.menu__title h1 {
+  font-family: "Shrikhand";
+  font-style: italic;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 41px;
+}
 .menu__title i {
   padding: 5px;
 }
+.menu__cards {
+  width: 100%;
+}
 
 .menu__content {
+  height: 310px;
   background-color: #F6F6F6;
   padding-bottom: 20px;
 }
 .menu__content__title {
-  margin-left: 20px;
   padding-bottom: 10px;
   border-bottom: 3px solid #99E2D0;
   z-index: 1;
   width: 40px;
+  text-transform: uppercase;
 }
 .menu__content__title h3 {
   font-family: "Inter";
@@ -329,47 +475,99 @@ footer a i {
 }
 
 .menu__card {
+  overflow: hidden;
+  width: calc(100% - 40px);
   height: 68px;
-  width: 90%;
-  margin: 20px 0 20px 20px;
+  margin: 20px 0 20px 0;
   border-radius: 15px;
-  position: relative;
-  overflow: hidden;
   cursor: pointer;
+  background-color: #99E2D0;
 }
-.menu__card__detail {
+.menu__card i {
+  display: block;
+  color: #FFFFFF;
+}
+.menu__card:hover i {
+  display: block;
+  animation: rotation 0.3s linear;
+}
+.menu__card:active i {
+  display: block;
+}
+.menu__card__icon__check {
+  padding: 25px;
+  float: right;
+}
+.menu__card__container {
+  position: absolute;
+  transition: all 0.4s ease;
+  border-radius: 15px;
+  height: 68px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.menu__card__detail span {
-  text-overflow: ellipsis;
-  overflow: hidden;
   white-space: nowrap;
+  text-align: left;
+  width: 100%;
+}
+.menu__card__container:hover {
+  width: calc(100% - 59px);
 }
 .menu__card__content {
-  padding: 10px;
+  text-overflow: ellipsis;
+  overflow: hidden;
   background-color: #FFFFFF;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transition: transform 0.8s;
+  width: 85%;
+  border-radius: 15px 0 0 15px;
+  padding: 10px 0 0 10px;
 }
-.menu__card__content:hover {
-  transform: translate(-50px, 0);
+.menu__card__content h2 {
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
-.menu__card__btn {
-  padding: 25px 18px;
+.menu__card__price {
+  background-color: #FFFFFF;
+  width: 15%;
+  padding-top: 30px;
+}
+
+@media (min-width: 720px) {
+  .menu__title {
+    justify-content: center;
+  }
+}
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.menu__cards > .menu__card {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  transition: transform 0.8s;
-  background-color: #99E2D0;
-  text-align: right;
-  justify-items: center;
+  max-width: 634px;
 }
-.menu__card__btn i {
-  color: white;
+.menu__cards > .menu__card:nth-child(2) {
+  animation: slide2 0.5s linear forwards;
+}
+.menu__cards > .menu__card:nth-child(3) {
+  animation: slide3 0.75s linear forwards;
+}
+
+@keyframes slide2 {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(78px);
+  }
+}
+@keyframes slide3 {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(156px);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
