--- a/css/scss/components/_loader.scss
+++ b/css/scss/components/_loader.scss
@@ -10,7 +10,8 @@
 		div {
 			height: 100%;
 			width: 100%;
-			margin: 20vw;
+			margin-left: calc(25% - 30px);
+			margin-top: calc(25% - 30px);
 		}
 
 		div > div{
