--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,8 @@ a {
 
 header {
   height: 63px;
+  max-width: 1040px;
+  margin: auto;
 }
 header i {
   float: left;
@@ -172,7 +174,7 @@ footer {
 .icon-like .fa-solid {
   opacity: 0;
   position: absolute;
-  transition: opacity 0.5s;
+  transition: opacity 0.7s;
 }
 .icon-like .fa-solid:hover {
   opacity: 1;
@@ -196,7 +198,8 @@ footer {
 .loader div {
   height: 100%;
   width: 100%;
-  margin: 20vw;
+  margin-left: calc(25% - 30px);
+  margin-top: calc(25% - 30px);
 }
 .loader div > div {
   display: block;
@@ -270,8 +273,9 @@ footer {
   font-weight: 500;
   font-size: 16px;
   padding: 15px;
+  cursor: pointer;
   min-width: 186px;
-  max-width: 218px;
+  max-width: 230px;
 }
 .primary-btn:hover {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(0, #9356DC -5.2%, #FF79DA 110.74%);
@@ -299,10 +303,18 @@ footer {
   height: 72px;
   margin-top: 20px;
   color: #7E7E7E;
+  cursor: pointer;
 }
 .howto button:hover {
   background-color: #F5EDFF;
   color: #9356DC;
+}
+.howto button span {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
 }
 .howto button i {
   float: left;
@@ -321,6 +333,7 @@ footer {
   float: left;
   margin-left: -16px;
   padding: 0 0 0 7px;
+  line-height: 24px;
 }
 
 .restaurants {
@@ -337,6 +350,7 @@ footer {
   border-radius: 15px;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
   background-color: #FFFFFF;
+  cursor: pointer;
 }
 .restaurants .card img {
   border-radius: 15px 15px 0 0;
@@ -419,6 +433,9 @@ footer {
   width: 100%;
   object-fit: cover;
 }
+.menu__image {
+  overflow: hidden;
+}
 .menu__container {
   max-width: 1055px;
   margin: auto;
@@ -489,7 +506,7 @@ footer {
 }
 .menu__card:hover i {
   display: block;
-  animation: rotation 0.3s linear;
+  animation: rotation 0.5s linear;
 }
 .menu__card:active i {
   display: block;
@@ -530,7 +547,11 @@ footer {
 }
 
 @media (min-width: 720px) {
-  .menu__title {
+  .menu img {
+    margin-top: -20%;
+    margin-bottom: -20%;
+  }
+  .menu____title {
     justify-content: center;
   }
 }
