--- a/css/scss/pages/menus.scss
+++ b/css/scss/pages/menus.scss
@@ -5,6 +5,7 @@
     }
     &__image{
         overflow: hidden;
+        max-height: 360px;
     }
 
     &__container{
@@ -55,6 +56,9 @@
     height: 310px; 
     background-color: $bg-menu-color;
     padding-bottom: 20px;
+    &--4cards{
+        height: 380px;
+    }
     &__title{
         padding-bottom: 10px;
         border-bottom: 3px solid #99E2D0;
@@ -167,11 +171,15 @@
 .menu__cards > .menu__card{
     position: absolute;
     max-width: 634px;
+    
     &:nth-child(2){
         animation: slide2 .50s linear forwards;
     }
     &:nth-child(3){
         animation: slide3 .75s linear forwards;
+    }
+    &:nth-child(4){
+        animation: slide4 .75s linear forwards;
     }
 }
 
@@ -190,5 +198,14 @@
     }
     to{
         transform: translateY(156px);
+    }
+}
+
+@keyframes slide4 {
+    from{
+        transform: translateY(0);
+    }
+    to{
+        transform: translateY(234px);
     }
 }
