Update with new figma design

--- a/css/scss/pages/index.scss
+++ b/css/scss/pages/index.scss
@@ -168,21 +168,17 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        overflow-x: hidden;
-       
-        
-
         &__cards{
             display: flex;
             flex-direction: row;
-            width: 100vw;
+            flex-wrap: wrap;
+
             & > article{
-                width: 335px;
+                width: 44%;
             }
         } 
         &__container{
             max-width: 1040px;
-            overflow-x: scroll;
             
         }
       }
