--- a/css/scss/pages/menus.scss
+++ b/css/scss/pages/menus.scss
@@ -140,6 +140,10 @@
         width: 15%;
         padding-top: 30px;
 
+        h2{
+            text-align: right;
+            margin-right: 20px;
+        }
     
     }
 
@@ -151,7 +155,7 @@
             margin-top: -20%;
             margin-bottom: -20%;
         }
-        &____title{
+        &__title{
             justify-content: center;
         }
     }
