--- a/css/scss/base/footer.scss
+++ b/css/scss/base/footer.scss
@@ -12,6 +12,11 @@ footer {
             margin-top: 5px;
             text-decoration: none;
             color: #FFFFFF;
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 19px;
             i{
                 margin-right: 10px;
             }
