--- a/css/scss/components/_icons.scss
+++ b/css/scss/components/_icons.scss
@@ -24,6 +24,7 @@
 .icon--gradient{
     background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
     background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     
 }
