--- a/css/scss/components/_loader.scss
+++ b/css/scss/components/_loader.scss
@@ -1,62 +1,57 @@
-.loader {
+#loader {
+	position: absolute;
+	left: 50%;
+	top: 50%;
 	z-index: 1;
-	background-color: white;
-	height: 100vh;
-	width: 100vw;
-		border-radius: inherit;
-		animation: load 2s forwards;
-		position: absolute;
+	width: 150px;
+	height: 150px;
+	margin: -75px 0 0 -75px;
+	border: 16px solid #f3f3f3;
+	border-radius: 50%;
+	border-top: 16px solid #A221B9;
+	width: 120px;
+	height: 120px;
+	-webkit-animation: spin 2s forwards;
+	animation: spin 2s forwards;
+  }
+  
+  @-webkit-keyframes spin {
+	0% { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	99.99% { transform: rotate(360deg); }
+	100% {visibility: hidden;}
+  }
+  
+  /* Add animation to "page content" */
+  .animate-bottom {
+	position: relative;
+	-webkit-animation-name: animatebottom;
+	-webkit-animation-duration: 1s;
+	animation-name: animatebottom;
+	animation-duration: 1s
+  }
+  
+  @-webkit-keyframes animatebottom {
+	from { bottom:-100px; opacity:0 } 
+	to { bottom:0px; opacity:1 }
+  }
+  
+  @keyframes animatebottom { 
+	from{ bottom:-100px; opacity:0 } 
+	to{ bottom:0; opacity:1 }
+  }
 
-		div {
-			height: 100%;
-			width: 100%;
-			margin-left: calc(25% - 30px);
-			margin-top: calc(25% - 30px);
-		}
 
-		div > div{
-			display:block;
-			width: 75px;
-			height: 75px;
-			border-style: solid;
-			border-width: 10px;
-			border-color: #CACACA;
-			border-top-color: #A221B9;
-			border-radius: 50%;
-			animation: loader 1.75s forwards;
-		  }
-		  
-		  span{
-			width: 100%;
-			height: 100%;
-			display: block;
-			border-radius: 100%;
-		  }
-		  
-		  @keyframes loader {
-			  0% {
-				transform:rotate(0deg);
-			}
-			  99.99% {
-				transform:rotate(360deg);
+  .container--loading, .footer--loading{
+	animation: hidden 2s forwards;
+  }
 
-			}
-			100%{
-				visibility: hidden;
-			}
-		  }
-
-}
-
-@keyframes load {
-	0% {
-	}
-	99.99% {
-		height: 100vh;
-		width: 100vw;
-	}
-	100%{
-		height: 0vh;
-		width: 0vh;
-	}
-}
+  @keyframes hidden {
+	0% { visibility: hidden; }
+	99.99% { visibility: hidden; }
+	100% {visibility: visible}
+  }
